# subtitle-server-pro-max

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile  compose.yaml  diesel.toml
backend/bindings/: LineComp.ts  LoadSong.ts
backend/migrations/: 20241019141011_schema.down.sql  20241019141011_schema.up.sql
backend/migrations/2024-11-01-113001_schema/: down.sql  up.sql
backend/src/: controller.rs  main.rs  schema.rs  sse.rs  types.rs
frontend/: .gitattributes  .prettierrc  Dockerfile  astro.config.mjs  components.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
frontend/public/: abakua.glb  font.json
frontend/src/: http.ts  types.ts  utils.ts
frontend/src/bindings/: AnimationType.ts  Color.ts  LineComp.ts  LoadSong.ts  SongName.ts
frontend/src/bindings/bindings/: LineComp.ts  LoadSong.ts
frontend/src/components/: AddSong.svelte  AddSongLine.svelte  AnotherScene.svelte  CanvasWrapper.svelte  EditSong.svelte  LoadSong.svelte  LoadSongComp.svelte  Scene.svelte  SongComp.svelte  Songs.svelte  Text.svelte  Text2.svelte  TitleLine.svelte
frontend/src/components/ui/button/: index.ts
frontend/src/components/ui/textarea/: textarea.svelte
frontend/src/layouts/: Layout.astro
frontend/src/pages/: add.astro  allsongs.astro  index.astro  second.astro  subtitle.astro  test.astro
frontend/src/pages/edit/: [id].astro
frontend/src/pages/song/: [id].astro
frontend/src/styles/: app.css
frontend/src/utils/: moveCamera.svelte.ts
