[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["http2"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.6", features = ["postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
pgvector = { version = "0.4", features = ["postgres", "diesel"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = "10.1.0"
